--- a/02-bases/src/app/app.component.html
+++ b/02-bases/src/app/app.component.html
@@ -12,3 +12,7 @@ propiedades escritas en la clase del componente -->
   Counter: {{counter}}
   <!-- Angular tambien tiene deteccion de errores en el HTML por TypeScript -->
 </h3>
+
+<button (click)="increaseBy(1)">+1</button>
+<button (click)="resetCounter()">Resetear contador</button>
+<button (click)="increaseBy(-1)">-1</button>
