--- a/02-bases/src/app/app.component.html
+++ b/02-bases/src/app/app.component.html
@@ -16,3 +16,5 @@ propiedades escritas en la clase del componente -->
 <button (click)="increaseBy(1)">+1</button>
 <button (click)="resetCounter()">Resetear contador</button>
 <button (click)="increaseBy(-1)">-1</button>
+
+<app-counter></app-counter>
