Funcionalidad del Counter encapsulada en su componente

--- a/02-bases/src/app/app.component.html
+++ b/02-bases/src/app/app.component.html
@@ -8,13 +8,15 @@ propiedades escritas en la clase del componente -->
   Bienvenidos a Angular
 </p>
 
-<h3>
-  Counter: {{counter}}
+<!-- Mover el contenido del counter a su respectivo component -->
+<!-- <h3> -->
+  <!-- Counter: {{counter}} -->
   <!-- Angular tambien tiene deteccion de errores en el HTML por TypeScript -->
-</h3>
-
-<button (click)="increaseBy(1)">+1</button>
-<button (click)="resetCounter()">Resetear contador</button>
+<!-- </h3> -->
+<!--
+<button (click)="increaseBy(1)">+1</button> -->
+<!-- <button (click)="resetCounter()">Resetear contador</button>
 <button (click)="increaseBy(-1)">-1</button>
-
+<hr> -->
+<!-- Counter completamente independiente al que esta arriba. -->
 <app-counter></app-counter>
