Clase de interpolacion, estructura de HTML y estilos

--- a/02-bases/src/app/app.component.html
+++ b/02-bases/src/app/app.component.html
@@ -21,4 +21,4 @@ propiedades escritas en la clase del componente -->
 <!-- Counter completamente independiente al que esta arriba. -->
 <!-- <app-counter></app-counter> -->
 <app-heroes-hero></app-heroes-hero>
-<app-heroes-list></app-heroes-list>
+  <!-- <app-heroes-list></app-heroes-list> -->
