--- a/02-bases/src/app/heroes/hero/hero.component.html
+++ b/02-bases/src/app/heroes/hero/hero.component.html
@@ -32,11 +32,23 @@
 </dl>
 
 
-<button (click)="changeHero()" class="btn btn-primary mx-2">
+<button (click)="changeHero()"
+  *ngIf="name !== 'Spiderman'"
+  class="btn btn-primary mx-2">
   Cambiar nombre
 </button>
 
 
-<button (click)="changeAge()" class="btn btn-primary">
+<button
+  *ngIf="age !== 25"
+  (click)="changeAge()"
+  class="btn btn-primary">
   Cambiar edad
+</button>
+
+<button
+  (click)="resetValues()"
+  class="btn btn-danger mx-2"
+  >
+  Reset
 </button>
