Leccion de NgFor

--- a/02-bases/src/app/app.component.html
+++ b/02-bases/src/app/app.component.html
@@ -20,5 +20,5 @@ propiedades escritas en la clase del componente -->
 <hr> -->
 <!-- Counter completamente independiente al que esta arriba. -->
 <!-- <app-counter></app-counter> -->
-<app-heroes-hero></app-heroes-hero>
-  <!-- <app-heroes-list></app-heroes-list> -->
+<!-- <app-heroes-hero></app-heroes-hero> -->
+  <app-heroes-list></app-heroes-list>
