--- a/02-bases/src/app/heroes/list/list.component.html
+++ b/02-bases/src/app/heroes/list/list.component.html
@@ -1,1 +1,26 @@
-<p>list works!</p>
+<h3> Listado de Heroes</h3>
+<!-- Rellenado de elementos con un componente -->
+<!-- <ul class="mt-2 list-group">
+  <li class="list-group-item">Spiderman</li>
+  <li class="list-group-item">Ironman</li>
+  <li class="list-group-item">Hulk</li>
+  <li class="list-group-item">Thor</li>
+</ul> -->
+
+<h3>Heroe eliminado: <small class="text-danger"> HeroName </small></h3>
+<h3>
+  No hay heroes eliminados
+</h3>
+<button class="btn btn-outline-danger">
+  Eliminar ultimo heroe
+</button>
+
+
+<ul class="mt-2 list-group">
+
+  <!-- Angular con el ngFor genera el mismo elemento HTML con todas
+  sus piezas internas y crear un template HTML basado en el numero
+  elementos de la lista y el ciclo  -->
+  <li *ngFor="let hero of heroNames"
+    class="list-group-item">{{hero}}</li>
+</ul>
