Modulo de DBZ y tarea del mismo

--- a/02-bases/src/app/app.component.html
+++ b/02-bases/src/app/app.component.html
@@ -19,6 +19,9 @@ propiedades escritas en la clase del componente -->
 <button (click)="increaseBy(-1)">-1</button>
 <hr> -->
 <!-- Counter completamente independiente al que esta arriba. -->
-<app-counter></app-counter>
+<!-- <app-counter></app-counter>
 <app-heroes-hero></app-heroes-hero>
-<app-heroes-list></app-heroes-list>
+<app-heroes-list></app-heroes-list> -->
+
+<!-- Seccion de extender bases -->
+<app-dbz-main-page></app-dbz-main-page>
