Sesion del decorador @Input()
Se completo la leccion del decorador que permite enviar variables de un elemento padre a un elemento hijo

--- a/02-bases/src/app/dbz/pages/main-page.component.html
+++ b/02-bases/src/app/dbz/pages/main-page.component.html
@@ -4,7 +4,9 @@
 
 <div class="row">
   <div class="col">
-    <dbz-list></dbz-list>
+    <!-- Para enviar los parametros del padre al hijo -->
+    <!-- Se utiliza la sintaxis de ()Input como [propiedad]="variable a enviar" -->
+    <dbz-list [characterList]="characters"></dbz-list>
 
   </div>
   <div class="col">
