Avances de la leccion de FormsModule y  NgModule

--- a/02-bases/src/app/dbz/components/add-character/add-character.component.html
+++ b/02-bases/src/app/dbz/components/add-character/add-character.component.html
@@ -1,11 +1,36 @@
 <h4>Agregar personaje</h4>
 
 <form action="" class="row">
-  <input class="form-control mb-2" type="text" placeholder="Nombre del personaje">
+    <!-- Si yo quisiera que el value apunte a una propiedad
+      Puedo encapsularlo con los corchetes para evaluarlo con una propiedad.
 
-  <input class="form-control mb-2" type="number" placeholder="Poder">
+      Los parentesis son para asociar eventos y los corchetes para atributos
+    -->
+
+      <!--
+        Se recomienda utilizar la directiva ngModel para controlar los formularios
+        para poder utilizar ngModel se debe de importar el modulo FormsModule
+      -->
+  <input
+  class="form-control mb-2"
+  [(ngModel)]="character.name"
+  name="name"
+  type="text"
+  placeholder="Nombre del personaje">
+
+  <input
+  class="form-control mb-2"
+  [(ngModel)]="character.power"
+  power="power"
+  type="number"
+  placeholder="Poder">
 
   <button type="submit" class="btn btn-primary">
     Agregar
   </button>
+
+  <pre>
+    {{ character | json}}
+  </pre>
+
 </form>
