--- a/02-bases/src/app/dbz/components/add-character/add-character.component.html
+++ b/02-bases/src/app/dbz/components/add-character/add-character.component.html
@@ -21,11 +21,11 @@
   <input
   class="form-control mb-2"
   [(ngModel)]="character.power"
-  power="power"
+  name="power"
   type="number"
   placeholder="Poder">
 
-  <button type="submit" class="btn btn-primary">
+  <button type="submit" class="btn btn-primary" (click)="emitCharacter()">
     Agregar
   </button>
 
