--- a/02-bases/src/app/dbz/pages/main-page.component.html
+++ b/02-bases/src/app/dbz/pages/main-page.component.html
@@ -6,7 +6,7 @@
   <div class="col">
     <!-- Para enviar los parametros del padre al hijo -->
     <!-- Se utiliza la sintaxis de ()Input como [propiedad]="variable a enviar" -->
-    <dbz-list [characterList]="characters"></dbz-list>
+    <dbz-list (onDelete)="onDeleteCharacter($event)" [characterList]="characters"></dbz-list>
 
   </div>
   <div class="col">
