--- a/02-bases/src/app/dbz/pages/main-page.component.html
+++ b/02-bases/src/app/dbz/pages/main-page.component.html
@@ -6,7 +6,7 @@
   <div class="col">
     <!-- Para enviar los parametros del padre al hijo -->
     <!-- Se utiliza la sintaxis de ()Input como [propiedad]="variable a enviar" -->
-    <dbz-list (onDelete)="dbzCharactersService.onDeleteCharacter($event)"
+    <dbz-list (onDelete)="dbzCharactersService.deleteCharacterByID($event)"
       [characterList]="dbzCharactersService.characters"></dbz-list>
 
   </div>
