--- a/02-bases/src/app/dbz/components/list/list.component.html
+++ b/02-bases/src/app/dbz/components/list/list.component.html
@@ -60,7 +60,7 @@
     <span>Es el ultimo {{isLast}}</span> -->
   </div>
 
-    <button (click)="onDeleteCharacter(character.id!)" class="btn btn-danger">x</button>
+    <button (click)="onDeleteCharacter(character.id)" class="btn btn-danger">x</button>
 <!--
     <span>Es Par: {{isEven}} </span>
     <span>Es Impar: {{isOdd}} </span> -->
