Sesion de diseño de gifs y tarea de CardList

--- a/03-gifs-app/src/app/app.component.html
+++ b/03-gifs-app/src/app/app.component.html
@@ -1,4 +1,7 @@
 <div class="d-flex">
     <shared-sidebar></shared-sidebar>
-    <!-- home page -->
+    <!-- Los componentes tecnicamente pueden ser vistos como divs
+      Lo que permite rellenarlos con parametros adicionales
+    -->
+    <gifs-home-page class="flex-fill"></gifs-home-page>
   </div>
