--- a/03-gifs-app/src/app/gifs/components/card-list/card-list.component.html
+++ b/03-gifs-app/src/app/gifs/components/card-list/card-list.component.html
@@ -1,5 +1,16 @@
-<ul>
-  <li>Primero</li>
-  <li>Segundo</li>
-  <li>Tercero</li>
-</ul>
+<div class="row">
+  <div class="col-md-3 col-sm-6">
+    <div class="card mb-2 text-center bg-dark">
+
+
+      <!-- TODO Crear imagen de Gif -->
+
+      <div class="card-body text-white">
+        <p class="card-text">
+          Hello World
+        </p>
+      </div>
+
+    </div>
+  </div>
+</div>
