--- a/03-gifs-app/src/app/gifs/components/card-list/card-list.component.html
+++ b/03-gifs-app/src/app/gifs/components/card-list/card-list.component.html
@@ -1,5 +1,5 @@
 <div class="row">
-  <div class="col-md-3 col-sm-6">
+  <div *ngFor="let gif of gifs" class="col-md-3 col-sm-6">
     <div class="card mb-2 text-center bg-dark">
 
 
@@ -7,7 +7,7 @@
 
       <div class="card-body text-white">
         <p class="card-text">
-          Hello World
+          {{gif.title}}
         </p>
       </div>
 
