--- a/03-gifs-app/src/app/gifs/components/card-list/card-list.component.html
+++ b/03-gifs-app/src/app/gifs/components/card-list/card-list.component.html
@@ -4,6 +4,10 @@
 
 
       <!-- TODO Crear imagen de Gif -->
+      <img
+        class="card-img-top"
+        [src]="gif.images.downsized_medium.url"
+        [alt]="gif.title">
 
       <div class="card-body text-white">
         <p class="card-text">
